kubernetes/sql-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sql-hs
  labels:
    app: mysql
spec:
  serviceName: "mysql-h"
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: gokulmsfag/mysql
          volumeMounts:
            - name: mysql-volume
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: efs-sc
        resources:
          requests:
            storage: 1Gi
