kubernetes/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: client
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
