kubernetes/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: server
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
