kubernetes/sql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sql-service
spec:
  selector:
    app: mysql
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
